variable for form's opening and closing

--- a/src/app/features/service/services.component.html
+++ b/src/app/features/service/services.component.html
@@ -14,11 +14,6 @@
 
             <th scope="row">{{ service.id }}</th>
             <td>{{ service.name }}</td>
-            <!-- <td >
-
-              <button  (click)="deleteService(item.id ?)">x</button>
-              <button  (click)="service.id ? updateService() : addService(service)">{{ service.id ? "Update" : "Add"}}</button>
-            </td> -->
             <td  *ngIf="service.id != null">
             <button class="btn btn-secondary"(click)="update(service)">Update</button>
             <button class="btn btn-danger"(click)="deleteService(service.id)">Delete</button>
@@ -28,7 +23,7 @@
     </table>
 
 
-  <div class="row">
+  <div *ngIf="isClicked" class="row">
     <div class="col-md-3"*ngIf="service != null"> <input class="form-control form-control-lg" [(ngModel)]="service.name"/></div>
     <div class="col-md-3"*ngIf="service != null">
   
