--- a/src/app/features/customer-details/customer-details/customer-details.component.html
+++ b/src/app/features/customer-details/customer-details/customer-details.component.html
@@ -1,3 +1,12 @@
 
+<div class="tables">
+   <span> <h5>Customer ID:</h5> <h4>{{details.customerId}}</h4> </span>
+   <br>
+   <span> <h5> Company Name:</h5> <h4>{{details.companyName}}</h4> </span>
+   <br>
+   <span> <h5> Tax Number:</h5> <h4>{{details.taxNumber}}</h4> </span>
+   <br>
 
+    </div>
     
+
