new order buttons setted

--- a/src/app/features/corporate-customers/corporate-customers.component.html
+++ b/src/app/features/corporate-customers/corporate-customers.component.html
@@ -1,4 +1,10 @@
 
+
+
+<br>
+<button class="btn btn-secondary">Set a New Order</button>
+
+
 <div class="filters">
 <input class="searchFilter" type="text" [(ngModel)]="searchName" placeholder="Company Name">
 <input class="searchFilter" type="number" [(ngModel)]="searchTax" placeholder="Tax Number">
