--- a/src/app/features/individual-customers/individual-customers.component.html
+++ b/src/app/features/individual-customers/individual-customers.component.html
@@ -1,3 +1,8 @@
+
+<br>
+<button class="btn btn-secondary">Set a New Order</button>
+
+
 <div class="filters">
   <input class="searchFilter" type="text" [(ngModel)]="searchFName" placeholder="First Name">
   <input class="searchFilter" type="text" [(ngModel)]="searchLName" placeholder="Last Name">
