date filter set for individual customers

--- a/src/app/features/individual-details/individual-details.component.html
+++ b/src/app/features/individual-details/individual-details.component.html
@@ -7,6 +7,7 @@
     <span> <h5> Last Name:</h5> <h4>{{details.lastName}}</h4> </span>
     <br>
     <span> <h5>National Identity:</h5> <h4>{{details.nationalIdentity}}</h4> </span>
- 
+    <br>
+    <span> <h5>Birth Date:</h5> <h4>{{details.birthDate}}</h4> </span>
 </div>
      
