--- a/src/app/features/individual-customers/individual-customers.component.html
+++ b/src/app/features/individual-customers/individual-customers.component.html
@@ -7,6 +7,7 @@
   <input class="searchFilter" type="text" [(ngModel)]="searchFName" placeholder="First Name">
   <input class="searchFilter" type="text" [(ngModel)]="searchLName" placeholder="Last Name">
   <input class="searchFilter" type="number" [(ngModel)]="searchNationId" placeholder="National Identity">
+  <input class="searchFilter" type="date" [(ngModel)]="searchBirthDate" placeholder="National Identity">
   </div>
 
 
@@ -18,15 +19,18 @@
       <th scope="col">First Name</th>
       <th scope="col">Last Name</th>
       <th scope="col">National Id</th>
+      <th scope="col">Birth Date</th>
+
     </tr>
   </thead>
-  <tbody *ngFor="let indCustomers of individualCustomers | firstNamePipe: searchFName | lastNamePipe: searchLName | idPipe: searchNationId">
+  <tbody *ngFor="let indCustomers of individualCustomers | firstNamePipe: searchFName | lastNamePipe: searchLName | idPipe: searchNationId | birthDatePipe: searchBirthDate ">
 
       <tr>
         <th scope="row">{{ indCustomers.customerId }}</th>
         <td>{{ indCustomers.firstName }}</td>
         <td>{{ indCustomers.lastName }}</td>
         <td>{{ indCustomers.nationalIdentity }}</td>
+        <td>{{ indCustomers.birthDate }}</td>
         <td>
           <button (click)="showDetails(indCustomers.customerId)" class="btn btn-secondary">Details</button>
          
