reducers and actions for customers and services

--- a/src/app/features/create-customer/create-customer.component.css
+++ b/src/app/features/create-customer/create-customer.component.css
@@ -48,8 +48,15 @@
     text-align: center;
     margin-bottom: 50px;
   }
-  .form-next{
-    margin-top: 10px;
+  .form-next1{
+    margin-top: 40px;
+    margin-left: 370px;
+    width: 70px;
+    border-radius: 10px;
+    padding: 5px;
+  }
+  .form-next2{
+    margin-top: 210px;
     margin-left: 370px;
     width: 70px;
     border-radius: 10px;
@@ -64,5 +71,5 @@
   }
   .btn-services:hover{
     cursor: pointer;
-    color: blue;
+    color: rgb(45, 136, 174);
   }
